--- a/style.css
+++ b/style.css
@@ -32,6 +32,16 @@ body {
   margin: 0;
 }
 
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: inherit;
+}
+
 .container {
   width: 100%;
   margin: auto;
@@ -46,10 +56,6 @@ body {
   color: white;
   width: 100%;
   height: 100vh;
-}
-
-a {
-  color: inherit;
 }
 
 .logo-container {
@@ -89,6 +95,7 @@ p {
   font-weight: 700;
   font-size: 1.125rem;
   max-width: 110ch;
+  font-size: inherit;
 }
 
 .form {
@@ -122,7 +129,8 @@ input:focus {
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
 }
 
-label {
+label,
+.toggle-pwd-btn {
   font-family: Roboto, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
@@ -134,6 +142,7 @@ label {
 .form-group {
   display: inline-flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .form-row {
@@ -142,9 +151,118 @@ label {
   flex-direction: row;
   column-gap: 40px;
   margin-top: 15px;
+  width: 100%;
 }
 
-.submit-btn {
+.form-row--single {
+  flex-direction: column;
+  max-width: 32ch;
+}
+
+.pwd-input {
+  padding-right: 100px;
+}
+
+.message {
+  font-family: Roboto, sans-serif;
+  border-radius: 4px;
+  margin-top: 5px;
+  font-size: 0.825rem;
+}
+
+.message p {
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.req-item {
+  margin-top: 4px;
+  margin-left: 20px;
+}
+
+.req-item.valid,
+.req-item.invalid {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 20px;
+  background-position: 0 0;
+  background-size: 1rem 1rem;
+  background-repeat: no-repeat;
+}
+
+.req-item.valid {
+  background-image: url("icons/check.svg");
+  color: green;
+}
+
+.req-item.invalid {
+  background-image: url("icons/error.svg");
+  color: red;
+}
+
+input:placeholder-shown {
+  border-color: #e5e7eb;
+}
+
+.form-group:has(input:valid) label:after,
+.form-group:has(input:invalid) label:after {
+  display: inline-block;
+  content: "";
+  width: 0.825rem;
+  height: 0.825rem;
+}
+
+.form-group:has(input:valid) label:after {
+  background: transparent url("icons/check.svg") no-repeat;
+  background-size: 0.825rem;
+}
+
+.form-group:has(input:invalid) label:after {
+  background: transparent url("icons/error.svg") no-repeat;
+  background-size: 0.825rem;
+}
+
+.form-group:has(input:placeholder-shown) label:after {
+  background: none;
+}
+
+.form-group:has(#confirm-password),
+.form-group:has(#password) {
+  position: relative;
+}
+
+.pwd-input {
+  padding-right: 80px;
+}
+
+.toggle-pwd-btn {
+  cursor: pointer;
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+  text-align: left;
+  position: absolute;
+  right: 0;
+  bottom: -2px;
+  width: 72px;
+  color: #596d48;
+}
+
+.pwd-visibility {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  column-gap: 4px;
+}
+
+.hide-pwd {
+  display: none;
+}
+
+#submit-btn {
   background-color: #596d48;
   color: white;
   width: 180px;
